Corrección de errores primer ciclo de pruebas

--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -17,8 +17,9 @@
         <h1 class="text-4xl font-bold mb-8 text-center text-indigo-600">Panel de Administrador</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <a href="/detalles-venta" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Detalles de Venta</a>
+			<a href="/rentabilidad-ejercicio" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Rentabilidad ejercicio</a>
             <a href="/estadisticas" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Estadísticas</a>
-            <a href="/productos/rentabilidad" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Productos Rentabilidad</a>
+            <a href="/rentabilidad-calculadora" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Productos Rentabilidad</a>
             <a href="/compras" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Compras</a>
             <a href="/productos" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Productos</a>
             <a href="/print/configure" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Impresora</a>
