--- a/src/main/resources/templates/caja.html
+++ b/src/main/resources/templates/caja.html
@@ -9,6 +9,17 @@
 </head>
 <body class="bg-gray-100">
 	<div class="container mx-auto py-4 px-2">
+		
+		<div class="container mx-auto py-4 px-2">
+		<a href="/detalles-venta" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Detalles de Venta</a>
+		<a href="/compras" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Ingreso mercaderia</a>
+		<a href="/clientes" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Clientes</a>
+		<a href="/productos" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Productos</a>
+		<a href="/proveedores" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Proveedores</a>
+		<a href="/cierrecaja" id="btn-cierrecaja" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Apertura y cierre caja (*)</a>
+		</div>
+		
+		
 	    <!-- Usuario y Logout -->
 	    <div class="flex justify-between items-center p-2 bg-blue-100 border border-blue-300 rounded-lg shadow-md">
 	        <div>
@@ -106,19 +117,23 @@
 			    </div>
 			</div>
 
-
 	            <!-- Método de Pago -->
 	            <div class="max-w-xl mx-auto flex-1 text-center border border-gray-200 rounded-lg mx-2 ml-10 mr-10 p-4 bg-green-100 shadow-lg">
 	                <h2 class="text-sm font-semibold mb-2">Método de Pago</h2>
 	                <div class="flex flex-wrap justify-center gap-2">
 	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('EFECTIVO')">Efectivo (E)</button>
-	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('TARJETADEBITO')">Débito (B)</button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('TARJETADEBITO')">Débito (w)</button>
 	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('TARJETACREDITO')">Crédito (C)</button>
 	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('QR')">QR (Q)</button>
-	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('CUENTACORRIENTE')">CTA. CORRIENTE (W)</button>
-						<button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="location.reload()">Cancelar (O)</button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" onclick="seleccionarMetodoPago('CUENTACORRIENTE')">CTA. CORRIENTE (X)</button>
+						<button class="bg-green-500 text-white rounded py-1 px-2 text-xs hover:bg-green-600 transition w-24" id="boton-recargar" onclick="location.reload()">Cancelar (O)</button>
 	                </div>
+					<div id="metodo-pago-seleccionado" class="mt-4 text-gray-800 text-sm font-semibold">
+				      Método de pago seleccionado: <span id="metodo-pago-nombre">Ninguno</span>
+				  </div>
 	            </div>
+				
+				
 
 	            <div class="mt-5 ml-10 mr-10">
 	                <button id="btn-registrar-venta" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300">Registrar Venta (R)</button>
@@ -148,8 +163,6 @@
 	        }
 	    </style>
 	</div>
-
-
 			<!-- Modal para ingresar DNI de cliente para Cuenta Corriente -->
 			<div id="modal-cuentacorriente" class="fixed z-10 inset-0 overflow-y-auto hidden">
 			    <div class="flex items-center justify-center min-h-screen bg-black bg-opacity-50">
@@ -163,13 +176,12 @@
 			                Guardar
 			            </button>
 			            <!-- Botón para cerrar modal -->
-			            <button id="btn-cerrar-modal-cuentacorriente" class="mt-6 w-full bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 rounded-md transition duration-200">
+			            <button id="btn-cerrar-modal-cuentacorriente" class="mt-6 w-full bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 rounded-md transition duration-200 btn-cerrar-modal-clase">
 			                Cerrar    
 			            </button>
 			        </div>
 			    </div>
 			</div>
-
 
 			<!-- Botones de Categorías y Productos -->
 			<div class="ml-10 mr-10 mb-6 p-4 bg-purple-100 border border-purple-300 rounded-lg shadow-lg">
@@ -185,7 +197,6 @@
 			            Ingresar Monto Manualmente
 			        </button>
 			    </div>
-			    
 			    <!-- Botones de productos con borde grande y separados -->
 			    <div id="productos" class="flex flex-wrap gap-6">
 			        <div th:each="producto : ${productos}">
@@ -196,7 +207,6 @@
 			        </div>
 			    </div>
 			</div>
-
 
 	<!-- Modal para ingresar monto manualmente -->
 	<div id="modal-monto" class="fixed z-10 inset-0 overflow-y-auto hidden">
@@ -211,7 +221,7 @@
 	                Guardar
 	            </button>
 	            <!-- Botón para cerrar modal -->
-	            <button id="btn-cerrar-modal" class="mt-6 w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 rounded-md transition duration-200">
+	            <button id="btn-cerrar-modal" class="mt-6 w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 rounded-md transition duration-200 btn-cerrar-modal-clase">
 	                Cerrar    
 	            </button>
 	        </div>
@@ -222,41 +232,27 @@
 	<script>
 		
 		// JavaScript para manejo de atajos de teclado
-		document.addEventListener('keydown', function(event) {
-		    const tagName = event.target.tagName.toLowerCase();
+		function cerrarModalesYSalirInputs() {
+		    // Quitar el foco de cualquier input
+		    document.activeElement.blur();
+		    // Cerrar todos los modales con la clase 'btn-cerrar-modal-clase'
+		    const botonesCerrarModales = document.querySelectorAll('.btn-cerrar-modal-clase');
+		    botonesCerrarModales.forEach(boton => boton.click());
+		}
 
-		    // Evitar la captura de teclas si el foco está en un input o textarea
-		    if (tagName === 'input' || tagName === 'textarea') {
-		        if (event.key === 'Enter') {
-		            event.preventDefault();
-		            if (event.target.id === 'dni-cliente') {
-		                document.getElementById('btn-aplicar-descuento').click();
-		            } else if (event.target.id === 'monto-manual') {
-		                document.getElementById('btn-guardar-monto').click();
-		            } else if (event.target.id === 'dni-cuentacorriente') {
-		                document.getElementById('btn-guardar-dni-cuentacorriente').click();
-		            }
-		        } else if (event.key === 'Escape') {
-		            event.preventDefault();
-		            event.target.blur(); // Desenfocar el input cuando se presiona Escape
-		        }
-		        return; // Si está en un input, evita que siga capturando atajos
-		    }
-
-		    // Atajos de teclado para otros casos
+		// Agregar los atajos de teclado
+		document.addEventListener('keydown', (event) => {
 		    switch (event.key.toLowerCase()) {
 		        case 'e': // Tecla E: seleccionar efectivo
 		            event.preventDefault();
 		            document.querySelector('button[onclick="seleccionarMetodoPago(\'EFECTIVO\')"]').click();
-		            // Colocar el foco en el campo de input de monto pagado
 		            document.getElementById('monto-pagado-input').focus();
 		            break;
-					case 'a': // Tecla E: seleccionar efectivo
-						            event.preventDefault();
-						            // Colocar el foco en el campo de input de dni
-						            document.getElementById('dni-cliente').focus();
-						            break;
-		        case 'b': // Tecla B: seleccionar tarjeta de débito
+		        case 'a': // Tecla A: enfocar dni-cliente
+		            event.preventDefault();
+		            document.getElementById('dni-cliente').focus();
+		            break;
+		        case 'w': // Tecla W: seleccionar tarjeta de débito
 		            event.preventDefault();
 		            document.querySelector('button[onclick="seleccionarMetodoPago(\'TARJETADEBITO\')"]').click();
 		            break;
@@ -268,74 +264,99 @@
 		            event.preventDefault();
 		            document.querySelector('button[onclick="seleccionarMetodoPago(\'QR\')"]').click();
 		            break;
-		        case 'u': // Tecla U: seleccionar cuenta corriente
+		        case 'x': // Tecla X: seleccionar cuenta corriente
 		            event.preventDefault();
 		            document.querySelector('button[onclick="seleccionarMetodoPago(\'CUENTACORRIENTE\')"]').click();
+		            document.getElementById('dni-cuentacorriente').focus();
+		            break;
+		        case 'o': // Tecla O: recargar
+		            event.preventDefault();
+		            document.getElementById('boton-recargar').click();
 		            break;
 		        case 'r': // Tecla R: registrar venta
 		            event.preventDefault();
 		            document.getElementById('btn-registrar-venta').click();
 		            break;
+		        case 'm': // Tecla M: mostrar modal y enfocar monto-manual
+		            event.preventDefault();
+		            document.getElementById('btn-mostrar-modal').click();
+		            document.getElementById('monto-manual').focus();
+		            break;
+		        case '+': // Tecla +: enfocar códigoDeBarras
+		            event.preventDefault();
+		            document.getElementById('codigoDeBarras').focus();
+		            break;
+		        case '.': // Tecla .: enfocar dni-cliente
+		            event.preventDefault();
+		            document.getElementById('dni-cliente').focus();
+		            break;
+				case '*': // Tecla .: enfocar dni-cliente
+		            event.preventDefault();
+		            document.getElementById('btn-cierrecaja').click();
+		            break;
 		        case 'escape': // Tecla Escape: cerrar modales y quitar foco
 		            event.preventDefault();
 		            cerrarModalesYSalirInputs();
 		            break;
+					case '-': // Tecla -: cerrar modales y quitar foco
+					   event.preventDefault();
+					   document.getElementById('btn-cerrar-modal').click();
+					   document.getElementById('btn-cerrar-modal-cuentacorriente').click();
+
+					   break;
 		    }
 		});
 		
+	
+
 		document.getElementById('ingresarCodigoManual').addEventListener('click', () => {
-		    // Obtener el valor del input
 		    const codigoIngresado = document.getElementById('codigoDeBarras').value.trim();
-		    
 		    if (codigoIngresado) {
-		        // Llamar a la función para procesar el código ingresado
 		        updateCodigoDeBarras(codigoIngresado);
-		    } else {
-		        alert("Por favor, ingresa un código válido.");
-		    }
+		    } 
 		});
 
-
 		let timer;
+		let lastInputTime = 0;
+
+		// Umbral de tiempo (en milisegundos) para distinguir entre escaneo y entrada manual
+		const THRESHOLD = 100;
 
 		document.getElementById('codigoDeBarras').addEventListener('input', function() {
 		    const codigoDeBarras = document.getElementById('codigoDeBarras').value.trim();
+		    const currentTime = Date.now();
 
-		    // Si ya hay un temporizador, lo cancelamos para reiniciarlo
+		    // Cancela el temporizador anterior para reiniciar el tiempo
 		    clearTimeout(timer);
 
-		    // Solo ejecutar la búsqueda si el campo no está vacío
 		    if (codigoDeBarras) {
-		        // Establecer un temporizador para que espere 500ms antes de hacer la búsqueda
-		        timer = setTimeout(function() {
-		            // Simular el clic en el botón "Buscar"
-		            document.getElementById('ingresarCodigoManual').click();
-		        }, 500); // Ajusta el tiempo a tu preferencia
+		        // Detecta si el ingreso fue rápido (posible escáner) o manual
+		        const timeSinceLastInput = currentTime - lastInputTime;
+		        lastInputTime = currentTime;
+
+		        // Solo ejecuta la búsqueda automática si el tiempo entre entradas es menor al umbral
+		        if (timeSinceLastInput < THRESHOLD) {
+		            timer = setTimeout(function() {
+		                document.getElementById('ingresarCodigoManual').click();
+		            }, 500); // 500ms para escaneo
+		        }
 		    }
 		});
 
-		// El evento del botón "Buscar" se maneja aquí
+		// Evento del botón "Buscar"
 		document.getElementById('ingresarCodigoManual').addEventListener('click', function() {
 		    const codigoDeBarras = document.getElementById('codigoDeBarras').value.trim();
 
 		    if (codigoDeBarras) {
-		        // Aquí puedes realizar la lógica de búsqueda del producto con el código de barras
 		        console.log('Código ingresado:', codigoDeBarras);
 
-		        // Limpiar el campo de texto después de presionar el botón
+		        // Limpia el campo de texto después de la búsqueda
 		        const inputField = document.getElementById('codigoDeBarras');
-		        inputField.value = '';  // Limpiar el campo de entrada
-
-		        // Enfocar el campo nuevamente
+		        inputField.value = '';
 		        inputField.focus();
-
-		        // Seleccionar todo el texto cuando el campo recibe el foco
 		        inputField.select();
-		    } else {
-		        alert('Por favor, ingrese un código de barras');
 		    }
 		});
-
 		
 		// Función para cerrar modales y salir de los inputs al presionar Escape
 		function cerrarModalesYSalirInputs() {
@@ -401,8 +422,6 @@
 		        .catch(error => console.error('Error al obtener cliente:', error));
 		});
 
-
-
 		function mostrarMensajeDescuento(tipo, mensaje) {
 		     const mensajeElemento = document.getElementById('mensaje-descuento');
 		     mensajeElemento.textContent = mensaje;
@@ -437,8 +456,6 @@
 		         mostrarMensajeDescuento('error', 'El subtotal no es un valor numérico válido.');
 		     }
 		 }
-	    
-	
 		
 		let productosSeleccionados = [];
 
@@ -586,12 +603,12 @@
 		        }
 
 		        // Extraer código de producto (4 primeros dígitos)
-		        const codigoDeProducto = codigoProducto.substring(0, 4);
+		        const codigoDeProducto = codigoProducto.substring(0, 5);
 
 		        // Extraer el importe (6 dígitos, del 5 al 10)
-		        const importeCadena = codigoProducto.substring(4, 10);
-		        const parteEntera = importeCadena.substring(0, 5); // Los primeros 5 dígitos son la parte entera
-		        const decimales = importeCadena.substring(5, 7); // Los últimos 2 dígitos son los decimales
+		        const importeCadena = codigoProducto.substring(5, 10);
+		        const parteEntera = importeCadena.substring(0, 4); // Los primeros 5 dígitos son la parte entera
+		        const decimales = importeCadena.substring(4, 7); // Los últimos 2 dígitos son los decimales
 
 		        // Convertir el importe a número decimal
 		        importe = parseFloat(`${parseInt(parteEntera, 10)}.${decimales}`);
@@ -750,12 +767,10 @@
 		    document.getElementById('vuelto').textContent = vuelto.toFixed(2);
 		});
 
-
 		function eliminarProducto(indice) {
 		    productosSeleccionados.splice(indice, 1);
 		    actualizarTablaProductosSeleccionados();
 		}
-
 		
 		document.addEventListener('DOMContentLoaded', function() {
 		    // Función para cerrar el modal
@@ -781,13 +796,14 @@
 		        // Actualizar la vista o realizar otras acciones necesarias
 		    });
 		});
-
-
 		
 		// Cambia el campo de monto pagado a total final al seleccionar el método de pago
 		// Función para seleccionar el método de pago y actualizar la interfaz
 		function seleccionarMetodoPago(metodo) {
 		    metodoPago = metodo;
+			
+			// Actualiza el método de pago seleccionado en la interfaz
+			       document.getElementById('metodo-pago-nombre').textContent = metodo;
 
 		    const subtotal = parseFloat(document.getElementById('subtotal-sin-descuentos').textContent) || 0;
 		    const descuentoAplicado = parseFloat(document.getElementById('monto-descuento').textContent) || 0;
@@ -919,7 +935,6 @@
 		    const startTime = new Date(sessionStorage.getItem('horaInicio'));
 		    const now = new Date();
 		    const elapsedMs = now - startTime;
-
 		    const hours = Math.floor(elapsedMs / (1000 * 60 * 60));
 		    const minutes = Math.floor((elapsedMs % (1000 * 60 * 60)) / (1000 * 60));
 		    const seconds = Math.floor((elapsedMs % (1000 * 60)) / 1000);
