--- a/src/main/resources/templates/editarProveedor.html
+++ b/src/main/resources/templates/editarProveedor.html
@@ -10,7 +10,7 @@
     <div class="max-w-3xl mx-auto bg-white shadow-md rounded-lg p-8">
         <h1 class="text-2xl font-bold mb-6 text-center text-blue-600" th:text="${requestURI.endsWith('/nuevo') ? 'Crear Nuevo Proveedor' : 'Editar Proveedor'}"></h1>
 
-        <form th:action="@{/proveedores}" th:object="${proveedor}" method="post" class="space-y-4">
+		<form th:action="@{/proveedores/actualizar/{id}(id=${proveedor.id})}" th:object="${proveedor}" method="post" class="space-y-4">
             <div>
                 <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre:</label>
                 <input type="text" id="nombre" th:field="*{nombre}" required
