--- a/src/main/resources/templates/calculadora_rentabilidad.html
+++ b/src/main/resources/templates/calculadora_rentabilidad.html
@@ -88,10 +88,10 @@
                                 <input type="text" name="nombreProducto" class="border border-gray-300 rounded p-1 w-full" th:value="${rentabilidadCalculadora.nombreProducto}" />
                             </td>
                             <td class="py-2 px-4">
-                                <input type="number" name="stock" class="border border-gray-300 rounded p-1 w-full cantidad" th:value="${rentabilidadCalculadora.stock}" min="0" />
+                                <input type="number" name="stock" class="border border-gray-300 rounded p-1 w-full cantidad" th:value="${rentabilidadCalculadora.stock}" min="0"  step="any" />
                             </td>
                             <td class="py-2 px-4">
-                                <input type="number" name="desperdicio" class="border border-gray-300 rounded p-1 w-full desperdicio" th:value="${rentabilidadCalculadora.desperdicio}" min="0" />
+                                <input type="number" name="desperdicio" class="border border-gray-300 rounded p-1 w-full desperdicio" th:value="${rentabilidadCalculadora.desperdicio}" min="0"  step="any" />
                             </td>
                             <td class="py-2 px-4">
                                 <input type="text" class="border border-gray-300 rounded p-1 w-full kilos-utilizables" readonly />
